--- a/main.html
+++ b/main.html
@@ -9,13 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
+		<div class="border-4 border border-danger w-50 h-25 ">1</div>
 		<div class=" ">1</div>
 		<div class=" ">1</div>
 		<div class=" ">1</div>
 		<div class=" ">1</div>
 		<div class=" ">1</div>
-		<div class=" ">1</div>
-
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
